package com.randioo.owlofwar_server_simplify_protobuf.protocol;
import "Game.proto";
import "Entity.proto";

message FightClientReadyRequest{
	
}

message FightClientReadyResponse{
	optional int32 errorCode=1;
}

message SCFightLoadResource{
	optional int32 myPlayerId = 1;
	repeated RoleResourceInfo roleResourceInfo = 2;
	optional bool isNPCGame = 3;
	optional int32 NPCMapId = 4;
}

message FightLoadResourceCompleteRequest{
	
}

message FightLoadResourceCompleteResponse{

}

message SCFightStartGame{
	optional int32 totalTime =1;
}

message FightGameActionRequest{
	optional GameAction gameAction = 1;
}

message FightGameActionResponse{
}

message FightGameOverRequest{
	
}

message FightGameOverResponse{

}

message SCFightKeyFrame{	
	repeated Frame frames = 1;
}

message FightGetGameAwardRequest{
	optional GameResultData gameResultData = 1;
}

message FightGetGameAwardResponse{
	optional GameResultAwardData gameResultAwardData = 1;
}

message FightCountDownRequest{
}

message FightCountDownResponse{
}

message SCFightCountDown{
}